# hockey-shuttle

./: .gitignore  CONTINUITY-REPORT-EPISODE-3.md  README.md  ROMANCE-ANALYSIS-EPISODE-3.md  ROMANCE-ENHANCEMENT-RECOMMENDATIONS.md  ROMANTIC-BEATS-EPISODE-3.md  SEASON-1-COMPLETE.md  SENSITIVITY-REPORT-EPISODE-3.md  STATUS.md  YA_BETA_READER_FEEDBACK.md  book-title-analysis.md  claude.md  pyproject.toml  setup-series.sh
.claude/: settings.local.json
.claude/agents/: authenticity-editor.md  character-psychologist.md  cliffhanger-engineer.md  continuity-tracker.md  developmental-editor.md  dialogue-coach.md  emotional-choreographer.md  episode-writer.md  prose-stylist.md  romance-specialist.md  sensitivity-reader.md  story-architect.md  teen-culture-consultant.md  visual-artist.md  web-developer-storyteller.md  world-builder.md  ya-beta-reader.md
hockey-shuttle/10-visuals/: wattpad-aesthetic-grids.md
scripts/: README-WATTPAD.md  README.md  compose_for_wattpad.py  create_aesthetic_grid.py  create_aesthetics_playlist.py  generate-all-episodes.sh  generate-episode.sh  generate_episode.py  generate_image.py
series/hockey-shuttle/01-world/: WORLD-SUMMARY.md  world-overview.md
series/hockey-shuttle/02-characters/: 00-character-overview.md  character-voices-guide.md  relationships-dynamics.md
website/: .vercelignore  DEPLOYMENT.md  PUBLICATION-READINESS-REPORT.md  check_metadata.py  vercel.json
website/specifications/: funcitonal-specification.md  functional-specification.md
website/src/: README.md  robots.txt  sitemap.xml
website/src/css/: styles.css  (+1 more)
(+248 files in other folders)
